# fastapi__allnotes

./: .env.tmplt  .gitignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
allnotes/: __main__.py  config.py
allnotes/kb/: crud.py  db.py  models.py  prepare.py  server.py
allnotes/routers/: api.py
allnotes/tools/: database.py  errors.py  odt2html.py
fastapi__allnotes/: __main__.py
fastapi__allnotes/kb/: crud.py  dbschema.py
fastapi__allnotes/tools/: errors.py  odt2html.py
tests/: conftest.py  test_crud.py  test_odt2html.py
